cmake_minimum_required(VERSION 3.20)
project(OOP2021)

set(CMAKE_CXX_STANDARD 14)

add_executable(1-1 1/1.c)
add_executable(1-2 1/2.c)
add_executable(1-3 1/3.c)

add_executable(2-1 2/1.cpp)
add_executable(2-2 2/2.cpp)
add_executable(2-3 2/3.cpp)

add_executable(3-1 3/1.cpp)
add_executable(3-2 3/2.cpp)
add_executable(3-3 3/3.cpp)
add_executable(3-4 3/4.cpp)
add_executable(3-5 3/5.cpp)

add_executable(4-1 4/1.cpp)
add_executable(4-2 4/2.cpp)
add_executable(4-3 4/3.cpp)
add_executable(4-4 4/4.cpp)
add_executable(4-5 4/5.cpp)
add_executable(4-6 4/6.cpp)

add_executable(5-1 5/1.cpp)
add_executable(5-2 5/2.cpp)
add_executable(5-3 5/3.cpp)
add_executable(5-4 5/4.cpp)

add_executable(6-1 6/1.cpp)
add_executable(6-2 6/2.cpp)
add_executable(6-3 6/3.cpp)
add_executable(6-4 6/4.cpp)
add_executable(6-5 6/5.cpp)

add_executable(7-1 7/1.cpp)
add_executable(7-2 7/2.cpp)
add_executable(7-3 7/3.cpp)
add_executable(7-4 7/4.cpp)
add_executable(7-5 7/5.cpp)
add_executable(7-6 7/6.cpp)
add_executable(7-7 7/7.cpp)

add_executable(8-1 8/1.cpp)
add_executable(8-2 8/2.cpp)

add_executable(9-1 9/1.cpp)
add_executable(9-2 9/2.cpp)
add_executable(9-3 9/3.cpp)
add_executable(9-4 9/4.cpp)
add_executable(9-5 9/5.cpp)

add_executable(10-1 10/1.cpp)

add_executable(K1-1 K1/1.cpp)
add_executable(K1-2 K1/2.cpp)
add_executable(K1-3 K1/3.cpp)
add_executable(K1-4 K1/4.cpp)
add_executable(K1-5 K1/5.cpp)
add_executable(K1-6 K1/6.cpp)
add_executable(K1-7 K1/7.c)
add_executable(K1-8 K1/8.c)
add_executable(K1-9 K1/9.cpp)
add_executable(K1-10 K1/10.cpp)
add_executable(K1-11 K1/11.cpp)
add_executable(K1-12 K1/12.cpp)
add_executable(K1-13 K1/13.cpp)
add_executable(K1-14 K1/14.cpp)
add_executable(K1-15 K1/15.c)
add_executable(K1-16 K1/16.c)
add_executable(K1-17 K1/17.cpp)
add_executable(K1-18 K1/18.c)
add_executable(K1-19 K1/19.cpp)
add_executable(K1-20 K1/20.c)
add_executable(K1-21 K1/21.cpp)
add_executable(K1-22 K1/22.cpp)

add_executable(K2-1 K2/1.cpp)
add_executable(K2-2 K2/2.cpp)
add_executable(K2-3 K2/3.cpp)
add_executable(K2-4 K2/4.cpp)
add_executable(K2-5 K2/5.cpp)
add_executable(K2-6 K2/6.cpp)
add_executable(K2-7 K2/7.cpp)
add_executable(K2-8 K2/8.cpp)
add_executable(K2-9 K2/9.cpp)
add_executable(K2-10 K2/10.cpp)
add_executable(K2-11 K2/11.cpp)
add_executable(K2-12 K2/12.cpp)
add_executable(K2-13 K2/13.cpp)
add_executable(K2-14 K2/14.cpp)
add_executable(K2-15 K2/15.cpp)
add_executable(K2-16 K2/16.cpp)
add_executable(K2-17 K2/17.cpp)